--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,14 @@
 img {
-    width:100px;
-    height:100px;
+    width:125px;
+    height: 125px;
+    border-radius: 10px;
+    border: 4px solid black;
+    padding:15px;
+}
+.container {
+    display: grid;
+    grid-template-columns: repeat(4,140px);
+    grid-template-rows: repeat(4,140px);
+    grid-gap: 30px;
+    margin-bottom: 30px;
 }
