--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,56 @@
 img {
-    width:125px;
-    height: 125px;
+    width:160px;
+    height: 160px;
     border-radius: 10px;
-    border: 4px solid black;
-    padding:15px;
 }
 .container {
+    margin-top:40px;
+    margin-left:12px;
     display: grid;
     grid-template-columns: repeat(4,140px);
     grid-template-rows: repeat(4,140px);
     grid-gap: 30px;
     margin-bottom: 30px;
+}
+.tile {
+    background-color:rgb(251, 222, 183);
+    border-radius: 10px;
+    width:160px;
+    height:160px;
+    border: 3px solid black;
+}
+.show img{
+    display:none;
+}
+.tile img {
+    display:none;
+}
+button {
+    margin-left:12px;
+}
+#score {
+    margin-left: 12px;
+    font-size: 28px;
+    font-family:arial;
+}
+.flexContainer {
+    display:flex;
+    flex-direction: row;   
+    justify-content: space-evenly;
+    margin-top:20px;
+}
+#tutorial {
+    border:3px solid black;
+    width:30%;
+    margin-top:20px;
+    margin-bottom: 6px;
+    border-radius: 10px;
+    padding: 30px;
+    font-size: 30px;
+    font-family: Helvetica;
+    align-self: center;
+}
+#accoutrements {
+    margin-left: 110px;
+    margin-top: 15px;
 }
